--- a/Lab_Assignment/R_Lab_Assignment.Rmd
+++ b/Lab_Assignment/R_Lab_Assignment.Rmd
@@ -2,11 +2,12 @@
 title: "DS311 - R Lab Assignment"
 author: "Your Name"
 date: "`r Sys.Date()`"
-output: 
+output:
   html_document:
     theme: united
     highlight: tango
     df_print: paged
+  pdf_document: default
 ---
 
 ```{r setup, include=FALSE}
@@ -35,7 +36,8 @@ a. Report the number of variables and observations in the data set.
 
 ```{r}
 # Enter your code here!
-
+num_variables <- ncol(mtcars)
+num_observations <- nrow(mtcars)
 
 # Answer:
 print("There are total of _____ variables and _____ observations in this data set.")
@@ -50,7 +52,7 @@ b. Print the summary statistics of the data set and report how many discrete and
 
 
 # Answer:
-print("There are _____ discrete variables and _____ continuous variables in this data set.")
+print("There are 11 discrete variables and 32 continuous variables in this data set.")
 ```
 
 
@@ -59,11 +61,13 @@ c. Calculate the mean, variance, and standard deviation for the variable **mpg**
 
 ```{r}
 # Enter your code here!
+m <- mean(mtcars$mpg)
+v <- var(mtcars$mpg)
+s <- sd(mtcars$mpg)
 
 
 
-
-# print(paste("The average of Mile Per Gallon from this data set is ",  , " with variance ",  , " and standard deviation",  , "."))
+print(paste("The average of Mile Per Gallon from this data set is ", m , " with variance ",  v, " and standard deviation",s  , "."))
 ```
 
 
@@ -72,7 +76,22 @@ d. Create two tables to summarize 1) average mpg for each cylinder class and 2) 
 
 ```{r}
 # Enter your code here!
+install.packages("dplyr")
+library(dplyr)
 
+# Table 1: Average mpg for each cylinder class
+avg_mpg_by_cyl <- mtcars %>%
+  group_by(cyl) %>%
+  summarise(Average_MPG = mean(mpg))
+# Table 1: Print
+print(avg_mpg_by_cyl)
+
+# Table 2: Standard deviation of mpg for each gear class
+sd_mpg_by_gear <- mtcars %>%
+  group_by(gear) %>%
+  summarise(Standard_Deviation_MPG = sd(mpg))
+# Table 2: Print
+print(sd_mpg_by_gear)
 
 
 
@@ -83,10 +102,17 @@ d. Create two tables to summarize 1) average mpg for each cylinder class and 2) 
 e. Create a crosstab that shows the number of observations belong to each cylinder and gear class combinations. The table should show how many observations given the car has 4 cylinders with 3 gears, 4 cylinders with 4 gears, etc. Report which combination is recorded in this data set and how many observations for this type of car.
 
 ```{r}
-# Enter your code here!
+crosstab <- table(mtcars$cyl, mtcars$gear)
+print(crosstab)
 
+max_count <- max(crosstab)
+most_common_combination <- which(crosstab == max_count, arr.ind = TRUE)
 
-print("The most common car type in this data set is car with ____ cylinders and ____ gears. There are total of _____ cars belong to this specification in the data set.")
+num_cylinders <- most_common_combination[1, 1]
+num_gears <- most_common_combination[1, 2]
+total_cars <- max_count
+
+print("The most common car type in this data set is car with 3 cylinders and 1 gears. There are total of 12 cars belong to this specification in the data set.")
 ```
 
 
@@ -106,6 +132,19 @@ data("PlantGrowth")
 head(PlantGrowth)
 
 # Enter your code here!
+install.packages("ggplot2")
+library(ggplot2)
+
+ggplot(PlantGrowth, aes(x = group, y = weight)) +
+  geom_boxplot(fill = "lightblue", color = "darkblue") +
+  labs(title = "Comparison of Plant Weights by Group",
+       x = "Group",
+       y = "Weight (grams)") +
+  theme_minimal()
+
+# My findings
+# Control is pretty good, trt1 is worse than controll so dont do that, trt2 is better than controll.
+
 
 
 ```
@@ -119,10 +158,18 @@ Result:
 b. Using the **mtcars** data set, plot the histogram for the column **mpg** with 10 breaks. Give labels to the title, x-axis, and y-axis on the graph. Report the most observed mpg class from the data set.
 
 ```{r}
+data(mtcars)
+hist(mtcars$mpg, breaks = 20, 
+     main = "Histogram of Miles Per Gallon (MPG)", 
+     xlab = "Miles Per Gallon (MPG)", 
+     ylab = "Frequency", 
+     col = "lightblue", 
+     border = "darkblue")
+
+most_observed_mpg <- as.numeric(names(which.max(table(mtcars$mpg))))
 
 
-
-print("Most of the cars in this data set are in the class of ______ mile per gallon.")
+print("Most of the cars in this data set are in the class of about 16 mile per gallon.")
 ```
 
 
@@ -137,11 +184,21 @@ data("USArrests")
 head(USArrests)
 
 # Enter your code here!
+pairs(USArrests, 
+      main = "Pairs Plot of US Arrests Data",
+      pch = 19, 
+      col = "lightblue")
 
+plot(USArrests$Murder, USArrests$Assault,
+     main = "Scatter Plot of Murder vs. Assault",
+     xlab = "Murder Rate",
+     ylab = "Assault Rate",
+     pch = 19, 
+     col = "darkblue")
 
 ```
 
-Result:
+Result: As the Assault Rate goes up also the murder rate increases.
 
 => Report a paragraph to summarize your findings from the plot!
 
@@ -172,6 +229,25 @@ a. Create your own descriptive statistics and aggregation tables to summarize th
 head(housingData)
 
 # Enter your code here!
+summary_stats <- housingData %>%
+  summarise(
+    Mean_Value = mean(Market.Value.per.SqFt),
+    Median_Value = median(Market.Value.per.SqFt),
+    Max_Value = max(Market.Value.per.SqFt),
+    Min_Value = min(Market.Value.per.SqFt)
+  )
+
+avg_value_neighborhood <- housingData %>%
+  group_by(Neighborhood) %>%
+  summarise(Average_Value = mean(Market.Value.per.SqFt))
+
+avg_value_borough <- housingData %>%
+  group_by(Boro) %>%
+  summarise(Average_Value = mean(Market.Value.per.SqFt))
+
+print(summary_stats)
+print(avg_value_neighborhood)
+print(avg_value_borough)
 
 
 ```
@@ -180,12 +256,26 @@ b. Create multiple plots to demonstrates the correlations between different vari
 
 ```{r}
 # Enter your code here!
+ggplot(housingData, aes(x = Year.Built, y = Market.Value.per.SqFt)) +
+  geom_point(alpha = 0.5) +
+  labs(title = "Market Value per SqFt vs Year Built",
+       x = "Year Built",
+       y = "Market Value per SqFt") +
+  theme_minimal()
 
+ggplot(housingData, aes(x = Boro, y = Market.Value.per.SqFt)) +
+  geom_boxplot() +
+  labs(title = "Market Value per SqFt by Borough",
+       x = "Borough",
+       y = "Market Value per SqFt") +
+  theme_minimal()
 
 ```
 
 c. Write a summary about your findings from this exercise.
 
-=> Enter your answer here!
+=> It shows that Manhattan has the highest Market Value per SqFt!
+
+Have a nice day!  ( ͡° ͜ʖ ͡°)
 
 
